--- a/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SAlphaCentauri.yaml
+++ b/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SAlphaCentauri.yaml
@@ -12,6 +12,7 @@ Keywords:
 - 12957A:Starfield.esm
 - 12179B:Starfield.esm
 - 000802:VenworksFactionOverhaul.esm
+- 1998F6:Starfield.esm
 Faction: 05BD93:Starfield.esm
 UnknownDATA: -1
 SystemLevel: 1
