--- a/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SJaffa.yaml
+++ b/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SJaffa.yaml
@@ -8,6 +8,7 @@ Keywords:
 - 00149F:Starfield.esm
 - 283581:Starfield.esm
 - 000803:VenworksFactionOverhaul.esm
+- 1998F6:Starfield.esm
 SystemLevel: 35
 UnknownDATA2: 11520
 ParentLocation: 01A53A:Starfield.esm
