--- a/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SKryx.yaml
+++ b/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SKryx.yaml
@@ -11,6 +11,8 @@ Keywords:
 - 1159EB:Starfield.esm
 - 061990:Starfield.esm
 - 023305:Starfield.esm
+- 1998F6:Starfield.esm
+- 017ADD:Starfield.esm
 Faction: 010B30:Starfield.esm
 UnknownDATA: -1
 SystemLevel: 20
