--- a/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SMasada.yaml
+++ b/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SMasada.yaml
@@ -8,6 +8,7 @@ Keywords:
 - 00149F:Starfield.esm
 - 000805:VenworksFactionOverhaul.esm
 - 12179A:Starfield.esm
+- 1998F6:Starfield.esm
 SystemLevel: 75
 UnknownDATA2: -256
 ParentLocation: 01A53A:Starfield.esm
