--- a/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SNarion.yaml
+++ b/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SNarion.yaml
@@ -9,15 +9,15 @@ Keywords:
 - 061990:Starfield.esm
 - 1159EE:Starfield.esm
 - 023305:Starfield.esm
-- 283580:Starfield.esm
 - 283581:Starfield.esm
 - 283582:Starfield.esm
 - 294969:Starfield.esm
 - 000802:VenworksFactionOverhaul.esm
 - 000813:VenworksFactionOverhaul.esm
-- 000814:VenworksFactionOverhaul.esm
 - 12179B:Starfield.esm
+- 000814:VenworksFactionOverhaul.esm
 - 000815:VenworksFactionOverhaul.esm
+- 1159EB:Starfield.esm
 SystemLevel: 1
 UnknownDATA2: 2560
 ParentLocation: 01A53A:Starfield.esm
