--- a/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SNemeria.yaml
+++ b/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SNemeria.yaml
@@ -6,6 +6,7 @@ Name:
   Value: Nemeria
 Keywords:
 - 00149F:Starfield.esm
+- 1998F6:Starfield.esm
 SystemLevel: 35
 UnknownDATA2: 11520
 ParentLocation: 01A53A:Starfield.esm
