--- a/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SVolii.yaml
+++ b/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SVolii.yaml
@@ -10,6 +10,7 @@ Keywords:
 - 1E79B9:Starfield.esm
 - 000815:VenworksFactionOverhaul.esm
 - 000814:VenworksFactionOverhaul.esm
+- 1998F6:Starfield.esm
 Faction: 0638E5:Starfield.esm
 SystemLevel: 5
 UnknownDATA2: 3840
