--- a/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SAltair.yaml
+++ b/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SAltair.yaml
@@ -6,6 +6,7 @@ Name:
   Value: Altair
 Keywords:
 - 00149F:Starfield.esm
+- 1998F6:Starfield.esm
 SystemLevel: 15
 UnknownDATA2: 6400
 ParentLocation: 01A53A:Starfield.esm
