--- a/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SCheyenne.yaml
+++ b/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SCheyenne.yaml
@@ -10,6 +10,7 @@ Keywords:
 - 1159EE:Starfield.esm
 - 1E79B9:Starfield.esm
 - 000814:VenworksFactionOverhaul.esm
+- 1998F6:Starfield.esm
 Faction: 0638E5:Starfield.esm
 SystemLevel: 1
 UnknownDATA2: 2560
