--- a/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SDeltaPavonis.yaml
+++ b/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SDeltaPavonis.yaml
@@ -6,6 +6,7 @@ Name:
   Value: Delta Pavonis
 Keywords:
 - 00149F:Starfield.esm
+- 1998F6:Starfield.esm
 SystemLevel: 25
 UnknownDATA2: 8960
 ParentLocation: 01A53A:Starfield.esm
