--- a/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SEridani.yaml
+++ b/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SEridani.yaml
@@ -10,6 +10,8 @@ Keywords:
 - 023305:Starfield.esm
 - 283581:Starfield.esm
 - 294969:Starfield.esm
+- 1998F6:Starfield.esm
+- 283580:Starfield.esm
 SystemLevel: 20
 UnknownDATA2: 7680
 ParentLocation: 01A53A:Starfield.esm
