--- a/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SEridani_PEridaniIII_MEridaniIII-b.yaml
+++ b/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SEridani_PEridaniIII_MEridaniIII-b.yaml
@@ -11,6 +11,7 @@ Keywords:
 - 023305:Starfield.esm
 - 283581:Starfield.esm
 - 294969:Starfield.esm
+- 283580:Starfield.esm
 UnknownDATA2: 16
 ParentLocation: 01A580:Starfield.esm
 WorldLocationRadius: 0
