--- a/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SEridani_PEridaniVI.yaml
+++ b/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SEridani_PEridaniVI.yaml
@@ -10,6 +10,7 @@ Keywords:
 - 023305:Starfield.esm
 - 283581:Starfield.esm
 - 294969:Starfield.esm
+- 283580:Starfield.esm
 UnknownDATA2: 16
 ParentLocation: 0615AB:Starfield.esm
 WorldLocationRadius: 0
