--- a/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SHyla.yaml
+++ b/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SHyla.yaml
@@ -10,6 +10,7 @@ Keywords:
 - 294969:Starfield.esm
 - 12179A:Starfield.esm
 - 000814:VenworksFactionOverhaul.esm
+- 1998F6:Starfield.esm
 SystemLevel: 40
 UnknownDATA2: 12800
 ParentLocation: 01A53A:Starfield.esm
