--- a/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SProcyonA.yaml
+++ b/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SProcyonA.yaml
@@ -9,6 +9,7 @@ Keywords:
 - 05BD8B:Starfield.esm
 - 12179B:Starfield.esm
 - 000802:VenworksFactionOverhaul.esm
+- 1998F6:Starfield.esm
 SystemLevel: 10
 UnknownDATA2: 5120
 ParentLocation: 01A53A:Starfield.esm
