--- a/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SSagan.yaml
+++ b/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SSagan.yaml
@@ -9,6 +9,7 @@ Keywords:
 - 1E79B9:Starfield.esm
 - 000815:VenworksFactionOverhaul.esm
 - 000814:VenworksFactionOverhaul.esm
+- 1998F6:Starfield.esm
 SystemLevel: 15
 UnknownDATA2: 6400
 ParentLocation: 01A53A:Starfield.esm
