--- a/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SSol.yaml
+++ b/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SSol.yaml
@@ -25,6 +25,8 @@ Keywords:
 - 12957A:Starfield.esm
 - 12179B:Starfield.esm
 - 000802:VenworksFactionOverhaul.esm
+- 017ADD:Starfield.esm
+- 1998F6:Starfield.esm
 Faction: 05BD93:Starfield.esm
 UnknownDATA: -1
 SystemLevel: 1
