--- a/Source/ESM-VenworksFactionOverhaul-GrindTerraFactions-Patch-Extracted/Locations/SNarion.yaml
+++ b/Source/ESM-VenworksFactionOverhaul-GrindTerraFactions-Patch-Extracted/Locations/SNarion.yaml
@@ -19,7 +19,7 @@ Keywords:
 - 000814:VenworksFactionOverhaul.esm
 - 000815:VenworksFactionOverhaul.esm
 - 000910:GrindTerraIndustriesFaction.esm
-- 1998F6:Starfield.esm
+- 1159EB:Starfield.esm
 UnknownDATA: -1
 SystemLevel: 15
 UnknownDATA2: 2560
