All contested planets will spawn terrormorphs

--- a/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SFeynman.yaml
+++ b/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SFeynman.yaml
@@ -10,6 +10,7 @@ Keywords:
 - 12179A:Starfield.esm
 - 283581:Starfield.esm
 - 000814:VenworksFactionOverhaul.esm
+- 1998F6:Starfield.esm
 SystemLevel: 55
 UnknownDATA2: -256
 ParentLocation: 01A53A:Starfield.esm
