--- a/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SRasalhague.yaml
+++ b/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SRasalhague.yaml
@@ -11,6 +11,7 @@ Keywords:
 - 000814:VenworksFactionOverhaul.esm
 - 283581:Starfield.esm
 - 12179A:Starfield.esm
+- 1998F6:Starfield.esm
 SystemLevel: 40
 UnknownDATA2: 12800
 ParentLocation: 01A53A:Starfield.esm
