--- a/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/STauCeti.yaml
+++ b/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/STauCeti.yaml
@@ -10,6 +10,7 @@ Keywords:
 - 283581:Starfield.esm
 - 12179B:Starfield.esm
 - 000802:VenworksFactionOverhaul.esm
+- 1998F6:Starfield.esm
 SystemLevel: 10
 UnknownDATA2: 5120
 ParentLocation: 01A53A:Starfield.esm
