--- a/Source/ESM-VenworksFactionOverhaul-AllFactions-Patch-Extracted/Locations/SNarion.yaml
+++ b/Source/ESM-VenworksFactionOverhaul-AllFactions-Patch-Extracted/Locations/SNarion.yaml
@@ -8,20 +8,21 @@ Keywords:
 - 00149F:Starfield.esm
 - 023305:Starfield.esm
 - 061990:Starfield.esm
-- 1159EE:Starfield.esm
 - 12179B:Starfield.esm
 - 283580:Starfield.esm
 - 283581:Starfield.esm
 - 283582:Starfield.esm
 - 294969:Starfield.esm
+- 000910:GrindTerraIndustriesFaction.esm
 - 000802:VenworksFactionOverhaul.esm
 - 000813:VenworksFactionOverhaul.esm
 - 000814:VenworksFactionOverhaul.esm
 - 000815:VenworksFactionOverhaul.esm
-- 000910:GrindTerraIndustriesFaction.esm
 - 1159EB:Starfield.esm
+- 1998F6:Starfield.esm
+Faction: 00087B:GrindTerraIndustriesFaction.esm
 UnknownDATA: -1
-SystemLevel: 15
+SystemLevel: 1
 UnknownDATA2: 2560
 ParentLocation: 01A53A:Starfield.esm
 WorldLocationRadius: 0
