--- a/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SAlphaAndraste.yaml
+++ b/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SAlphaAndraste.yaml
@@ -8,6 +8,7 @@ Keywords:
 - 00149F:Starfield.esm
 - 283581:Starfield.esm
 - 000803:VenworksFactionOverhaul.esm
+- 1998F6:Starfield.esm
 SystemLevel: 30
 UnknownDATA2: 10240
 ParentLocation: 01A53A:Starfield.esm
