--- a/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SBannoc.yaml
+++ b/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SBannoc.yaml
@@ -10,6 +10,7 @@ Keywords:
 - 283581:Starfield.esm
 - 12179A:Starfield.esm
 - 000814:VenworksFactionOverhaul.esm
+- 1998F6:Starfield.esm
 SystemLevel: 50
 UnknownDATA2: -256
 ParentLocation: 01A53A:Starfield.esm
