--- a/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SBessel.yaml
+++ b/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SBessel.yaml
@@ -11,6 +11,7 @@ Keywords:
 - 000813:VenworksFactionOverhaul.esm
 - 12179B:Starfield.esm
 - 000802:VenworksFactionOverhaul.esm
+- 1998F6:Starfield.esm
 SystemLevel: 10
 UnknownDATA2: 5120
 ParentLocation: 01A53A:Starfield.esm
