--- a/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SMaal.yaml
+++ b/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SMaal.yaml
@@ -9,6 +9,7 @@ Keywords:
 - 000813:VenworksFactionOverhaul.esm
 - 294969:Starfield.esm
 - 283580:Starfield.esm
+- 1998F6:Starfield.esm
 SystemLevel: 60
 UnknownDATA2: -256
 ParentLocation: 01A53A:Starfield.esm
