--- a/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SSerpentis.yaml
+++ b/Source/ESM-VenworksFactionOverhaul-Extracted/Locations/SSerpentis.yaml
@@ -9,6 +9,7 @@ Keywords:
 - 1E79B6:Starfield.esm
 - 0CC6C3:Starfield.esm
 - 283580:Starfield.esm
+- 050472:Starfield.esm
 UnknownDATA: -1
 SystemLevel: 55
 UnknownDATA2: -256
