Removed the UC non-hostile hostile set NPCs

--- a/Source/ESM-VenworksFactionOverhaul-Extracted/Keywords/LocEncUCVanguard.yaml
+++ b/Source/ESM-VenworksFactionOverhaul-Extracted/Keywords/LocEncUCVanguard.yaml
@@ -1,9 +1,9 @@
 FormKey: 000802:VenworksFactionOverhaul.esm
-EditorID: LocEncUCVangaurd
+EditorID: LocEncUCVanguard
 FormVersion: 556
 Color: '#00FFFFFF'
 Type: 20
 FNAM: 0x00000000
 Name:
   TargetLanguage: English
-  Value: United Colonies Vangaurd
+  Value: United Colonies Vanguard
