--- a/Source/ESM-VenworksFactionOverhaul-Extracted/Npcs/MCS_Definition_Ecliptic_Assault.yaml
+++ b/Source/ESM-VenworksFactionOverhaul-Extracted/Npcs/MCS_Definition_Ecliptic_Assault.yaml
@@ -1,5 +1,5 @@
-FormKey: 0008F1:VenworksFactionOverhaul.esm
-EditorID: MCS_Definition_Spacer_Charger
+FormKey: 00088F:VenworksFactionOverhaul.esm
+EditorID: MCS_Definition_Ecliptic_Assault
 VirtualMachineAdapter:
   Scripts:
   - Name: MCS_NPCOverrideName
@@ -23,19 +23,19 @@ Level:
 DispositionBase: 35
 UseTemplateActors: 8338
 Factions:
-- Faction: 04CE26:Starfield.esm
-- Faction: 27BB8C:Starfield.esm
-DeathItem: 27BB74:Starfield.esm
+- Faction: 04CE25:Starfield.esm
+- Faction: 27028D:Starfield.esm
+DeathItem: 27028B:Starfield.esm
 TemplateActors:
   StatsTemplate: 000861:VenworksFactionOverhaul.esm
-  AiDataTemplate: 000845:VenworksFactionOverhaul.esm
+  AiDataTemplate: 000842:VenworksFactionOverhaul.esm
   BaseDataTemplate: 000861:VenworksFactionOverhaul.esm
-  Unknown1: 000871:VenworksFactionOverhaul.esm
+  Unknown1: 00086F:VenworksFactionOverhaul.esm
 Race: 00347D:Starfield.esm
 CombatOverridePackageList: 0102ED:Starfield.esm
 Items:
 - Item:
-    Item: 3D0947:Starfield.esm
+    Item: 3D60AF:Starfield.esm
     Count: 1
 Confidence: Average
 EnergyLevel: 50
@@ -43,17 +43,16 @@ Responsibility: NoCrime
 Assistance: HelpsFriendsAndAllies
 UnknownAIDT: 1
 Keywords:
-- 03818E:Starfield.esm
-- 06D976:Starfield.esm
+- 06D977:Starfield.esm
 - 12FF1F:Starfield.esm
 - 0008AB:VenworksFactionOverhaul.esm
-- 0008B2:VenworksFactionOverhaul.esm
+- 0008AF:VenworksFactionOverhaul.esm
 Class: 010B2F:Starfield.esm
-CombatStyle: 2C562C:Starfield.esm
+CombatStyle: 2C5632:Starfield.esm
 NAM5: 0xFF00
 HeightMin: 1
 HeightMax: 1
 DefaultOutfit: 2EB236:Starfield.esm
-SpaceOutfit: 3D094E:Starfield.esm
+SpaceOutfit: 27027D:Starfield.esm
 DefaultPackageList: 2C55CA:Starfield.esm
-FormationFaction: 04CE26:Starfield.esm
+FormationFaction: 04CE25:Starfield.esm
