--- a/Source/ESM-VenworksFactionOverhaul-Extracted/Npcs/MCS_Definition_Spacer_Assault.yaml
+++ b/Source/ESM-VenworksFactionOverhaul-Extracted/Npcs/MCS_Definition_Spacer_Assault.yaml
@@ -2,7 +2,7 @@ FormKey: 0008DC:VenworksFactionOverhaul.esm
 EditorID: MCS_Definition_Spacer_Assault
 VirtualMachineAdapter:
   Scripts:
-  - Name: HCS_NPCOverrideName
+  - Name: MCS_NPCOverrideName
     Properties:
     - MutagenObjectType: ScriptObjectProperty
       Name: LIST_NAMES_MALE
@@ -13,6 +13,7 @@ VirtualMachineAdapter:
     - MutagenObjectType: ScriptObjectProperty
       Name: Venpi_DebugEnabled
       Object: 000800:VenpiCore.esm
+ODTY: 0
 Flags:
 - Respawn
 XpValueOffset: 15
