Added back unknown5 and Unknown6 to the level stats lists it allows pc level multi and auto calc to be sent to the leveled NPC. Also added Crimson Fleet titles for Sacel The Work MCS Beta

--- a/Source/ESM-VenworksFactionOverhaul-Extracted/LeveledNpcs/LChar_MCS_Stats.yaml
+++ b/Source/ESM-VenworksFactionOverhaul-Extracted/LeveledNpcs/LChar_MCS_Stats.yaml
@@ -2,6 +2,9 @@ FormKey: 000861:VenworksFactionOverhaul.esm
 EditorID: LChar_MCS_Stats
 FormVersion: 558
 ODTY: 0
+Flags:
+- 0x20
+- 0x40
 Entries:
 - Level: 1
   Reference: 0008BC:VenworksFactionOverhaul.esm
