--- a/Source/ESM-VenworksFactionOverhaul-Extracted/LeveledNpcs/LChar_MCS_Stats_B02.yaml
+++ b/Source/ESM-VenworksFactionOverhaul-Extracted/LeveledNpcs/LChar_MCS_Stats_B02.yaml
@@ -2,6 +2,9 @@ FormKey: 0008BD:VenworksFactionOverhaul.esm
 EditorID: LChar_MCS_Stats_B02
 FormVersion: 558
 ODTY: 0
+Flags:
+- 0x20
+- 0x40
 Entries:
 - Level: 105
   Reference: 000851:VenworksFactionOverhaul.esm
