--- a/Source/ESM-VenworksFactionOverhaul-Extracted/LeveledNpcs/LChar_MCS_Stats_B04.yaml
+++ b/Source/ESM-VenworksFactionOverhaul-Extracted/LeveledNpcs/LChar_MCS_Stats_B04.yaml
@@ -2,6 +2,9 @@ FormKey: 000901:VenworksFactionOverhaul.esm
 EditorID: LChar_MCS_Stats_B04
 FormVersion: 558
 ODTY: 0
+Flags:
+- 0x20
+- 0x40
 Entries:
 - Level: 305
   Reference: 0008DD:VenworksFactionOverhaul.esm
