--- a/Source/ESM-VenworksFactionOverhaul-Extracted/Keywords/LocEncBountyHunters.yaml
+++ b/Source/ESM-VenworksFactionOverhaul-Extracted/Keywords/LocEncBountyHunters.yaml
@@ -2,7 +2,7 @@ FormKey: 283583:Starfield.esm
 EditorID: LocEncBountyHunters
 FormVersion: 556
 Color: '#00FFFFFF'
-Type: None
+Type: 20
 FNAM: 0x00000000
 Name:
   TargetLanguage: English
