--- a/Source/ESM-VenworksFactionOverhaul-Extracted/Keywords/LocEncCreatures.yaml
+++ b/Source/ESM-VenworksFactionOverhaul-Extracted/Keywords/LocEncCreatures.yaml
@@ -2,7 +2,7 @@ FormKey: 283586:Starfield.esm
 EditorID: LocEncCreatures
 FormVersion: 556
 Color: '#00FFFFFF'
-Type: None
+Type: 20
 FNAM: 0x00000000
 Name:
   TargetLanguage: English
