--- a/Source/ESM-VenworksFactionOverhaul-Extracted/Keywords/LocEncRobots.yaml
+++ b/Source/ESM-VenworksFactionOverhaul-Extracted/Keywords/LocEncRobots.yaml
@@ -2,7 +2,7 @@ FormKey: 0581DF:Starfield.esm
 EditorID: LocEncRobots
 FormVersion: 556
 Color: '#00FFFFFF'
-Type: None
+Type: 20
 FNAM: 0x00000000
 Name:
   TargetLanguage: English
